--- a/index.html
+++ b/index.html
@@ -119,12 +119,14 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      width: 45%;
     }
 
     .game-area {
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
+      gap: 10px;
     }
   </style>
 </head>
@@ -141,6 +143,7 @@
 
     <div class="start-button">
       <button id="start-btn">Start Game</button>
+      <button id="pause-btn">Pause Game</button>
     </div>
 
     <div class="words-container" id="words"></div>
@@ -148,9 +151,11 @@
     <div class="game-area">
       <div class="dropzone" id="abstract">
         <h3>Abstract Nouns</h3>
+        <div id="abstract-zone"></div>
       </div>
       <div class="dropzone" id="concrete">
         <h3>Not Abstract</h3>
+        <div id="concrete-zone"></div>
       </div>
     </div>
   </div>
@@ -163,17 +168,22 @@
     let score = 0;
     let time = 60;
     let timer;
+    let timerRunning = false;
 
     const wordsContainer = document.getElementById('words');
-    const abstractZone = document.getElementById('abstract');
-    const concreteZone = document.getElementById('concrete');
+    const abstractZone = document.getElementById('abstract-zone');
+    const concreteZone = document.getElementById('concrete-zone');
     const feedback = document.getElementById('feedback');
     const scoreDisplay = document.getElementById('score');
     const timerDisplay = document.getElementById('timer');
     const startBtn = document.getElementById('start-btn');
+    const pauseBtn = document.getElementById('pause-btn');
 
     function setupGame() {
       wordsContainer.innerHTML = '';
+      abstractZone.innerHTML = '';
+      concreteZone.innerHTML = '';
+
       allWords.forEach(word => {
         const div = document.createElement('div');
         div.className = 'word';
@@ -186,14 +196,26 @@
     }
 
     function startTimer() {
-      timer = setInterval(() => {
-        time--;
-        timerDisplay.textContent = `Time: ${time}s`;
-        if (time <= 0) {
-          clearInterval(timer);
-          feedback.textContent = `Time's up! Final score: ${score}`;
-        }
-      }, 1000);
+      if (!timerRunning) {
+        timerRunning = true;
+        timer = setInterval(() => {
+          time--;
+          timerDisplay.textContent = `Time: ${time}s`;
+          if (time <= 0) {
+            clearInterval(timer);
+            feedback.textContent = `Time's up! Final score: ${score}`;
+            timerRunning = false;
+          }
+        }, 1000);
+      }
+    }
+
+    function pauseTimer() {
+      if (timerRunning) {
+        clearInterval(timer);
+        timerRunning = false;
+        feedback.textContent = 'Game paused.';
+      }
     }
 
     function updateScore(isCorrect) {
@@ -203,15 +225,21 @@
       feedback.textContent = isCorrect ? "Nice job!" : "Try again!";
     }
 
-    function setupDropzone(zone, type) {
+    function setupDropzone(zone, zoneId) {
       zone.addEventListener('dragover', e => e.preventDefault());
       zone.addEventListener('drop', e => {
         e.preventDefault();
         const data = JSON.parse(e.dataTransfer.getData('text'));
-        const isCorrect = data.type === type;
+        const isCorrect = (zoneId === 'abstract' && data.type === 'abstract') || (zoneId === 'concrete' && data.type === 'concrete');
         updateScore(isCorrect);
         const wordElem = [...wordsContainer.children].find(el => el.textContent === data.text);
-        if (wordElem) wordElem.remove();
+        if (wordElem) {
+          wordElem.remove();
+          const placedWord = document.createElement('div');
+          placedWord.className = 'word';
+          placedWord.textContent = data.text;
+          zone.appendChild(placedWord);
+        }
       });
     }
 
@@ -220,6 +248,8 @@
       startTimer();
       startBtn.disabled = true;
     });
+
+    pauseBtn.addEventListener('click', pauseTimer);
 
     setupDropzone(abstractZone, 'abstract');
     setupDropzone(concreteZone, 'concrete');
